--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,19 @@ body {
 /* title */
 #title {
   display: flex;
-  justify-content: center;
+  
   font-size: 2rem;
   padding: 0;
-  /* border: var(--border-debug); */
+  border: var(--border-debug);
+  width: 70%;
+  margin-left: auto;
   
 }
 
 #title > h1 {
-  margin: auto;
-  /* border: var(--border-debug); */
+  font-style: normal;
+  font-weight: 280;
+  border: var(--border-debug);
 }
 
 .about-me-container {
@@ -67,7 +70,7 @@ body {
   flex-direction: column;
   
   text-align: justify;
-  /* border: var(--border-debug); */
+  border: var(--border-debug);
   margin-top: 5rem;
   width: 65%;
   margin-left: auto;
