impl: css right col

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   
   font-size: 2rem;
   padding: 0;
-  border: var(--border-debug);
+  /* border: var(--border-debug); */
   width: 70%;
   margin-left: auto;
   
@@ -62,22 +62,30 @@ body {
 #title > h1 {
   font-style: normal;
   font-weight: 280;
-  border: var(--border-debug);
+  /* border: var(--border-debug); */
 }
-
+/* About me */
 .about-me-container {
   display: flex;
   flex-direction: column;
   
   text-align: justify;
-  border: var(--border-debug);
+  /* border: var(--border-debug); */
   margin-top: 5rem;
   width: 65%;
   margin-left: auto;
   padding-right: 2rem;
   
-  
 }
+/* about header */
+#about > h2 {
+  font-weight: 280;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+/* about p */
+
 
 
 
